--- a/index.html
+++ b/index.html
@@ -2223,6 +2223,9 @@
         <script src="http://view.jqueryui.com/master/ui/jquery.ui.position.js"></script>
         <script src="http://view.jqueryui.com/master/ui/jquery.ui.menu.js"></script>
         <script src="http://view.jqueryui.com/master/ui/jquery.ui.selectmenu.js"></script>
+        <script src="http://view.jqueryui.com/master/ui/jquery.ui.tabs.js"></script>
+        <script src="http://view.jqueryui.com/master/ui/jquery.ui.datepicker.js"></script>
+        <script src="http://view.jqueryui.com/master/ui/jquery.ui.accordion.js"></script>
         <script src="js/atk-helpers-min.js"></script>
         <script src="js/demo-min.js"></script>
 
