--- a/index.html
+++ b/index.html
@@ -2226,6 +2226,8 @@
         <script src="http://view.jqueryui.com/master/ui/jquery.ui.tabs.js"></script>
         <script src="http://view.jqueryui.com/master/ui/jquery.ui.datepicker.js"></script>
         <script src="http://view.jqueryui.com/master/ui/jquery.ui.accordion.js"></script>
+        <script src="http://view.jqueryui.com/master/ui/jquery.ui.dialog.js"></script>
+        <script src="http://view.jqueryui.com/master/ui/jquery.ui.button.js"></script>
         <script src="js/atk-helpers-min.js"></script>
         <script src="js/demo-min.js"></script>
 
