--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 		<link href="css/style.css" rel="stylesheet" type="text/css" />
-		<link href="css/style.css" rel="stylesheet" type="text/css" />
     </head>
 	<body>
         <!--[if lt IE 7]>
@@ -49,6 +48,16 @@
 								<div class="span_6 col"><div class="atk-box-small">.col.span_6</div></div>
 							</div>
 						</section>
+						<section id="typography">
+							<h2>Style Switching</h2>
+                            <p>Try alternative stylings</p>
+                            <div class="atk-box atk-inline">
+								<div class="atk-actions do-theme-switch">
+									<button data-file="style.css" class="atk-button atk-effect-danger">Fluid layout</button><button
+                                        data-file="fixed.css" class="atk-button">Fixed width</button><button
+                                        data-file="compact.css" class="atk-button">Compact</button>
+								</div>
+							</div>
 						<section id="typography">
 							<h2>Typography</h2>
 							<p>Few <span class="atk-label atk-effect-info">&lt;p&gt;</span> paragraphs of text.</p>
@@ -1939,7 +1948,7 @@
         <script src="http://view.jqueryui.com/master/ui/jquery.ui.dialog.js"></script>
         <script src="http://view.jqueryui.com/master/ui/jquery.ui.button.js"></script>
         <script src="js/atk-helpers-min.js"></script>
-        <script src="js/demo-min.js"></script>
+        <script src="js/demo.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
