removed broken switcher

--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
 								<div class="span_6 col"><div class="atk-box-small">.col.span_6</div></div>
 							</div>
 						</section>
+                        <!-- 
+                         Temporary off until we create alternative CSS versions
 						<section id="typography">
 							<h2>Style Switching</h2>
                             <p>Try alternative stylings</p>
@@ -58,6 +60,8 @@
                                         data-file="compact.css" class="atk-button">Compact</button>
 								</div>
 							</div>
+                        </section>
+                        -->
 						<section id="typography">
 							<h2>Typography</h2>
 							<p>Few <span class="atk-label atk-effect-info">&lt;p&gt;</span> paragraphs of text.</p>
