Testing deploy hook

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <div class="atk-layout">
 			<div class="atk-layout-row">
-				<header id="atk-header" class="atk-size-giga atk-swatch-ink atk-padding-small atk-align-center">AgileToolkit <span class="atk-label atk-swatch-yellow">CSS</span></header>
+				<header id="atk-header" class="atk-size-giga atk-swatch-ink atk-padding-small atk-align-center">AgileToolkit <span class="atk-label atk-swatch-yellow">CSS</span> v4.3</header>
 			</div>
 			<div id="atk-main" class="atk-layout-row fluid">
 				<div id="atk-main-inner" class="atk-layout">
