Playground merged with Framework. New folder structure.

--- a/playground/index.html
+++ b/playground/index.html
@@ -153,25 +153,25 @@
 								In progress...
 							</div>
 							<h4>Shapes</h4>
-							<div class="atk-box" id="example-styling-shapes">
-								<div class="atk-cells atk-cells-gutter atk-align-center">
+							<div class="atk-box atk-inline" id="example-styling-shapes">
+								<div class="atk-cells atk-cells-gutter-large atk-align-center">
 									<div class="atk-cell">
 										<p class="atk-padding atk-inline atk-swatch-ink atk-shape-rectangle"></p>
 										<div>.atk-shape-rectangle</div>
 									</div>
 									<div class="atk-cell">
-										<p class="atk-padding atk-inline atk-swatch-ink atk-shape-rounded"></p>
-										<div>.atk-shape-rounded</div>
-									</div>
-									<div class="atk-cell">
 										<p class="atk-padding atk-inline atk-swatch-ink atk-shape-circle"></p>
 										<div>.atk-shape-circle</div>
+									</div>
+									<div class="atk-cell">
+										<p class="atk-padding atk-inline atk-swatch-ink atk-shape-rounded"></p>
+										<div>.atk-shape-rounded</div>
 									</div>
 								</div>
 							</div>
 							<h3>Blocks</h3>
 							<h4>Labels</h4>
-							<p><span class="atk-label atk-effect-info">.atk-label</span> component is used to highlight a piece of text.</p>
+							<p><span class="atk-label atk-effect-info">.atk-label</span> component is used to highlight a piece of text. The best used with <span class="atk-label atk-effect-info">.atk-effect-*</span> and <span class="atk-label atk-effect-info">.atk-swatch-*</span>.</p>
 							<div class="atk-box">
 								Lorem ipsum <span class="atk-label atk-effect-success">dolor</span> sit amet, consectetur adipiscing elit. Aliquam quam augue, placerat nec lacus nec, tristique sagittis lectus. Donec eu accumsan ipsum. Pellentesque at <span class="atk-label atk-effect-warning">fringilla</span> elit. Etiam auctor dui at consectetur blandit. Nulla <span class="atk-label atk-swatch-red">sagittis</span> neque nisi, eget ornare nunc fermentum eu. In ante justo, mollis vitae lectus vel, mollis dictum mauris.
 							</div>
