--- a/playground/layout-default.html
+++ b/playground/layout-default.html
@@ -52,6 +52,7 @@
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/jquery-1.10.2.min.js"><\/script>')</script>
+        <script src="js/jquery.ui.selectmenu.js"></script>
         <script src="js/atk-helpers-min.js"></script>
         <script src="js/demo-min.js"></script>
 
