created alternative style configs.

--- a/playground/index.html
+++ b/playground/index.html
@@ -46,20 +46,17 @@
 								<div class="span_6 col"><div class="atk-box-small">.col.span_6</div></div>
 							</div>
 						</section>
-                        <!-- 
-                         Temporary off until we create alternative CSS versions
 						<section id="typography">
 							<h2>Style Switching</h2>
                             <p>Try alternative stylings</p>
                             <div class="atk-box atk-inline">
 								<div class="atk-actions do-theme-switch">
 									<button data-file="style.css" class="atk-button atk-effect-danger">Fluid layout</button><button
-                                        data-file="fixed.css" class="atk-button">Fixed width</button><button
-                                        data-file="compact.css" class="atk-button">Compact</button>
+                                        data-file="style-fixed.css" class="atk-button">Fixed width</button><button
+                                        data-file="style-compact.css" class="atk-button">Compact</button>
 								</div>
 							</div>
                         </section>
-                        -->
 						<section id="typography">
 							<h2>Typography</h2>
 							<p>Few <span class="atk-label atk-effect-info">&lt;p&gt;</span> paragraphs of text.</p>
