Changes in structure.

--- a/playground/layout.html
+++ b/playground/layout.html
@@ -12,8 +12,7 @@
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-		<link href="css/agiletoolkit.css" rel="stylesheet" type="text/css" />
-		<link href="css/agiletoolkit-custom.css" rel="stylesheet" type="text/css" />
+		<link href="css/playground.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -22,25 +21,19 @@
 
         <!-- Content -->
         <div class="atk-layout">
-			<div id="atk-header" class="atk-layout-row">
+			<div id="atk-header" class="atk-layout-row atk-swatch-ink">
 				<h1>Header (auto)</h1>
 			</div>
 			<div id="atk-main" class="atk-layout-row fluid">
 				<div id="atk-main-inner" class="atk-layout">
-					<div id="LSide" class="atk-layout-column span_1">
+					<div class="atk-layout-column span_1 atk-swatch-gray">
 						<p>.span_1</p>
-					</div>
-					<div id="LSide2" class="atk-layout-column span_3">
-						<p>.span_3</p>
 					</div>
 					<div id="atk-content" class="atk-layout-column fluid">
 						<h2>Content (fluid)</h2>
 					</div>
-					<div id="RSide" class="atk-layout-column span_1">
+					<div class="atk-layout-column span_1 atk-swatch-gray">
 						<p>.span_1</p>
-					</div>
-					<div id="RSide2" class="atk-layout-column span_2">
-						<p>.span_2</p>
 					</div>
 				</div>
 			</div>
