--- a/playground/layout.html
+++ b/playground/layout.html
@@ -12,7 +12,7 @@
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-		<link href="css/playground.css" rel="stylesheet" type="text/css" />
+		<link href="css/style.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -37,7 +37,7 @@
 					</div>
 				</div>
 			</div>
-			<div id="atk-footer" class="atk-layout-row">
+			<div id="atk-footer" class="atk-layout-row atk-swatch-ink">
 				<h3>Footer (auto)</h3>
 			</div>
 		</div>
