Testing durability of atk-layout.

--- a/playground/layout.html
+++ b/playground/layout.html
@@ -22,17 +22,17 @@
         <!-- Content -->
         <div class="atk-layout">
 			<div id="atk-header" class="atk-layout-row atk-swatch-ink">
-				<h1>Header (auto)</h1>
+				<header id="atk-header" class="atk-size-giga atk-swatch-ink atk-padding-small atk-align-center">AgileToolkit <span class="atk-label atk-swatch-yellow">CSS</span></header>
 			</div>
 			<div id="atk-main" class="atk-layout-row fluid">
 				<div id="atk-main-inner" class="atk-layout">
-					<div class="atk-layout-column span_1 atk-swatch-gray">
+					<div class="atk-layout-column span_3 atk-swatch-gray">
 						<p>.span_1</p>
 					</div>
 					<div id="atk-content" class="atk-layout-column fluid">
 						<h2>Content (fluid)</h2>
 					</div>
-					<div class="atk-layout-column span_1 atk-swatch-gray">
+					<div class="atk-layout-column span_3 atk-swatch-gray">
 						<p>.span_1</p>
 					</div>
 				</div>
