Changes in playground.
Fixed Shapes and Media Blocks examples so they would display properly
on ipad.

--- a/playground/index.html
+++ b/playground/index.html
@@ -46,7 +46,7 @@
 								<div class="span_6 col"><div class="atk-box-small">.col.span_6</div></div>
 							</div>
 						</section>
-						<section id="typography">
+						<section>
 							<h2>Style Switching</h2>
                             <p>Try alternative stylings</p>
                             <div class="atk-box atk-inline">
@@ -1571,7 +1571,7 @@
 							<h2>Widgets</h2>
 							<h3>Media Blocks</h3>
 							<p>Combination of <a href="#colors" class="atk-label atk-effect-info">.atk-swatch-*</a>, <span class="atk-label atk-effect-info">.atk-box</span> and <span class="atk-label atk-effect-info">.atk-cells</span> components.</p>
-							<div class="atk-box">
+							<div class="atk-box" id="example-widgets-mediablocks">
 								<div class="row">
 									<div class="span_6 col">
 										<div class="atk-cells atk-cells-gutter-large atk-box atk-swatch-green">
@@ -1580,9 +1580,10 @@
 											</div>
 											<div class="atk-cell atk-jackscrew">
 												<h4>Apples</h4>
-												<p>Donec dolor sapien, sollicitudin in erat ac, pellentesque venenatis orci. Nullam faucibus lacus quis sem fermentum adipiscing.</p>
-												<hr class="small" />
-												<a href="#"><span class="icon-down-circled-1"></span>Download</a>
+												<p>Donec dolor sapien, sollicitudin in erat ac, pellentesque venenatis orci.</p>
+												<div class="atk-actions">
+													<a href="#"><span class="icon-down-circled-1"></span>Download</a><a href="#"><span class="icon-trash"></span>Delete</a>
+												</div>
 											</div>
 										</div>
 										<div class="atk-cells atk-cells-gutter-large atk-box atk-swatch-red">
@@ -1591,22 +1592,24 @@
 											</div>
 											<div class="atk-cell atk-jackscrew">
 												<h4>Tomatoes</h4>
-												<p>Donec dolor sapien, sollicitudin in erat ac, pellentesque venenatis orci. Nullam faucibus lacus quis sem fermentum adipiscing.</p>
-												<hr class="small" />
-												<a href="#"><span class="icon-down-circled-1"></span>Download</a>
+												<p>Donec dolor sapien, sollicitudin in erat ac, pellentesque venenatis orci.</p>
+												<div class="atk-actions">
+													<a href="#"><span class="icon-down-circled-1"></span>Download</a><a href="#"><span class="icon-trash"></span>Delete</a>
+												</div>
 											</div>
 										</div>
 									</div>
 									<div class="span_6 col">
-										<div class="atk-cells atk-cells-gutter-large atk-box atk-swatch-yellow">
+										<div class="atk-cells atk-cells-gutter-large atk-box atk-swatch-yellow atk-valign-top">
 											<div class="atk-cell">
 												<img src="temp/bananas.jpg" alt="Bananas" />
 											</div>
 											<div class="atk-cell atk-jackscrew">
 												<h4>Bananas</h4>
-												<p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris at venenatis justo.</p>
-												<hr class="small" />
-												<a href="#"><span class="icon-down-circled-1"></span>Download</a>
+												<p>Class aptent taciti sociosqu ad litora torquent per conubia nostra.</p>
+												<div class="atk-actions">
+													<a href="#"><span class="icon-down-circled-1"></span>Download</a><a href="#"><span class="icon-trash"></span>Delete</a>
+												</div>
 											</div>
 										</div>
 										<div class="atk-cells atk-cells-gutter-large atk-box atk-swatch-blue">
@@ -1615,9 +1618,10 @@
 											</div>
 											<div class="atk-cell atk-jackscrew">
 												<h4>Blueberries</h4>
-												<p>Nunc id erat sit amet sapien convallis ultricies sed vel est. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
-												<hr class="small" />
-												<a href="#"><span class="icon-down-circled-1"></span>Download</a>
+												<p>Nunc id erat sit amet sapien convallis ultricies sed vel est.</p>
+												<div class="atk-actions">
+													<a href="#"><span class="icon-down-circled-1"></span>Download</a><a href="#"><span class="icon-trash"></span>Delete</a>
+												</div>
 											</div>
 										</div>
 									</div>
