New design for dialogs. Problem with the button option.

--- a/playground/index.html
+++ b/playground/index.html
@@ -1847,18 +1847,35 @@
 							<section id="jqueryui">
 								<h2>jQueryUI Widgets</h2>
 								<h3>Dialogs</h3>
-								<p>Basic modal <span class="atk-label atk-effect-info">.ui-dialog</span> with some buttons in a content area.</p>
+								<p>Basic modal <span class="atk-label atk-effect-info">.ui-dialog</span> with a minimal form in it.</p>
 								<div class="atk-box atk-inline">
 									<button class="atk-button" id="opener">Open Dialog</button>
 								</div>
 								<div id="dialog" title="Basic dialog">
-								  <p>This is an animated dialog which is useful for displaying information. The dialog window can be moved, resized and closed with the 'x' icon.</p>
+								  <p>Sed ut dolor nec orci tincidunt interdum. Phasellus ipsum. Nunc tristique tempus lectus.</p>
+									<div class="atk-form atk-form-stacked atk-form-compact">
+										<form>
+											<div class="atk-form-fieldset">
+												<div class="atk-cells">
+													<div class="atk-cell"></div>
+													<div class="atk-cell"><input type="text" placeholder="Input"/></div>
+												</div>
+												<div class="atk-cells">
+													<div class="atk-cell"></div>
+													<div class="atk-cell"><span class="atk-input-icon"><input type="password" placeholder="Password" /><a href="#" class="icon-help-circled-1"></a></span></div>
+												</div>
+											</div>
+											<div class="atk-actions">
+												<button class="atk-button atk-swatch-green atk-jackscrew">Okay</button>
+											</div>
+										</form>
+									</div>
 								</div>
-								<p>Modal <span class="atk-label atk-effect-info">.ui-dialog</span> with the <span class="atk-label atk-effect-info">button</span> option.</p>
+								<p>Modal <span class="atk-label atk-effect-info">.ui-dialog</span> with the <span class="atk-label atk-effect-info">button</span> option on. It is recommended to use only 2 buttons in the panel.</p>
 								<div class="atk-box atk-inline">
-									<button class="atk-button" id="opener2">Open .atk-dialog-minimal</button>
+									<button class="atk-button" id="opener2">Open Dialog with the Button Panel</button>
 								</div>
-								<div id="dialog-buttonpane" title="Dialog with Button">
+								<div id="dialog-buttonpane" title="Dialog with the Button Panel">
 								  <p>This is an animated dialog which is useful for displaying information. The dialog window can be moved, resized and closed with the 'x' icon.</p>
 								</div>
 								<h3>Tabs</h3>
@@ -1878,7 +1895,6 @@
 										</div>
 										<div id="tabs-3">
 											<p>Mauris eleifend est et turpis. Duis id erat. Suspendisse potenti. Aliquam vulputate, pede vel vehicula accumsan, mi neque rutrum erat, eu congue orci lorem eget lorem. Vestibulum non ante. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce sodales. Quisque eu urna vel enim commodo pellentesque. Praesent eu risus hendrerit ligula tempus pretium. Curabitur lorem enim, pretium nec, feugiat nec, luctus a, lacus.</p>
-											<p>Duis cursus. Maecenas ligula eros, blandit nec, pharetra at, semper at, magna. Nullam ac lacus. Nulla facilisi. Praesent viverra justo vitae neque. Praesent blandit adipiscing velit. Suspendisse potenti. Donec mattis, pede vel pharetra blandit, magna ligula faucibus eros, id euismod lacus dolor eget odio. Nam scelerisque. Donec non libero sed nulla mattis commodo. Ut sagittis. Donec nisi lectus, feugiat porttitor, tempor ac, tempor vitae, pede. Aenean vehicula velit eu tellus interdum rutrum. Maecenas commodo. Pellentesque nec elit. Fusce in lacus. Vivamus a libero vitae lectus hendrerit hendrerit.</p>
 										</div>
 									</div>
 								</div>
